WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284640
AX: Accessing AXIsolatedTree::rootNode() should not require taking a lock
https://bugs.webkit.org/show_bug.cgi?id=284640
Summary
AX: Accessing AXIsolatedTree::rootNode() should not require taking a lock
Tyler Wilcock
Reported
2024-12-13 10:27:35 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-13 10:27:46 PST
<
rdar://problem/141445513
>
Tyler Wilcock
Comment 2
2024-12-13 11:51:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37927
EWS
Comment 3
2024-12-13 19:25:21 PST
Committed
287828@main
(36b6519ff89e): <
https://commits.webkit.org/287828@main
> Reviewed commits have been landed. Closing PR #37927 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug